Add Limit Maximum Redirect Connections number.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
-1. Maximum Redirect Connections is not implement.
+1. To Support UDP.
 2. Performance.
 3. Usage is too simple.
+4. Check Config File.
