--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-1. To Support UDP.
-2. Usage is too simple.
-3. Check Config File.
+1. Usage is too simple.
+2. Check Config File.
+3. Performance, Select Read or Write Timeout Value.
